@startuml
left to right direction
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho

package "config" {
  class configParser
  class globalConfig <<struct>>
  class serverConfig
  class locationConfig
  class Listen <<struct>>
  class limitExcept <<struct>>
  class directiveValue <<struct>>
  class cgiConfig <<struct>>
}

package "http" {
  abstract class RequestHandler
  class StaticRequestHandler
  class CgiRequestHandler
  class Router
  class HttpParser
  class HttpRequest
  class HttpResponse
  class HttpException
  class ErrorPageGenerator
  class MimeTypes
  class StatusCodes
}

package "server" {
  class Socket
  class CgiContext <<struct>>
  class Connection <<struct>>
  class EventLoop
  class Server
}

package "entry points" {
  class main
  class main_testing
  class config_main
  class cgi_main
}

RequestHandler <|-- StaticRequestHandler
RequestHandler <|-- CgiRequestHandler
CgiRequestHandler <|-- Connection
'/ Inheritance? '/

configParser ..> globalConfig : parse()
configParser ..> serverConfig : build
configParser ..> locationConfig : build

globalConfig o-- "1..*" serverConfig : servers
globalConfig ..> Server : initServerRoutine()
serverConfig o-- "1..*" Listen
serverConfig o-- "0..*" locationConfig
serverConfig o-- limitExcept
serverConfig o-- directiveValue
locationConfig o-- limitExcept
locationConfig o-- directiveValue
locationConfig o-- cgiConfig

Server o-- Socket
Server ..> EventLoop
Server ..> globalConfig : run()
Socket ..> Listen

EventLoop o-- "0..*" Connection
EventLoop ..> Router
EventLoop ..> HttpParser
EventLoop ..> globalConfig
EventLoop ..> CgiContext

Connection o-- HttpRequest
Connection o-- HttpResponse
Connection o-- CgiContext
Connection ..> CgiRequestHandler

Router o-- StaticRequestHandler
Router o-- CgiRequestHandler
Router ..> Connection
Router ..> HttpRequest
Router ..> HttpResponse
Router ..> globalConfig

HttpParser ..> HttpRequest
HttpParser ..> HttpException

StaticRequestHandler ..> HttpRequest
StaticRequestHandler ..> HttpResponse
StaticRequestHandler ..> HttpException
StaticRequestHandler ..> MimeTypes

CgiRequestHandler ..> HttpRequest
CgiRequestHandler ..> HttpResponse
CgiRequestHandler ..> HttpException
CgiRequestHandler ..> globalConfig
CgiRequestHandler ..> serverConfig
CgiRequestHandler ..> locationConfig
CgiRequestHandler ..> Router
CgiRequestHandler ..> Connection

ErrorPageGenerator ..> HttpException
StatusCodes ..> HttpResponse

main ..> Server
main ..> Router
main ..> HttpParser
main ..> HttpRequest
main ..> HttpResponse
main ..> HttpException
main ..> ErrorPageGenerator
main_testing ..> configParser
main_testing ..> globalConfig
main_testing ..> EventLoop
main_testing ..> Server
config_main ..> configParser
config_main ..> globalConfig
cgi_main ..> configParser
cgi_main ..> globalConfig
cgi_main ..> Router

note right of Connection
  Connection is the runtime state container.
  It stores request/response objects,
  CGI pipes, and the current state.
end note

note bottom of EventLoop
  Main event loop: accept, read, parse,
  route, run CGI, write, close/reset.
end note

@enduml
